# scheduleoff

./: Cargo.toml  LICENSE  README.md
builds/: scheduleoff-macos-arm64  scheduleoff-macos-x86_64
src/: main.rs
