[package]
name = "scheduleoff"
version = "0.1.0"
edition = "2021"
authors = ["Scott Pease",]
description = "Wrapper around `pmset schedule` for easy near-term sleep and shutdown time setting."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
